--- a/papers/cicero.yaml
+++ b/papers/cicero.yaml
@@ -5,7 +5,7 @@ image:
 paper:
   title: Human-Level Play in the Game of Diplomacy by Combining Language Models With
     Strategic Reasoning
-  link: https://www.science.org/doi/full/10.1126/science.ade9097
+  link: https://noambrown.github.io/papers/22-Science-Diplomacy-TR.pdf
 authors:
 - Meta Fundamental AI Research Diplomacy Team (FAIR)
 venue: Science Issue 378, Dec 2022
